--- a/site/src/sites.yml
+++ b/site/src/sites.yml
@@ -2630,3 +2630,31 @@
       name: Hofer Ivan
       location: Italy
       company: null
+- title: svelte-command-palette
+  url: https://svelte-command-palette.vercel.app
+  repo: https://github.com/rohitpotato/svelte-command-palette
+  description: Dead simple command palette with fuzzy search.
+  uses:
+    - TypeScript
+    - Playwright
+    - PostCSS
+    - Tailwind
+    - Release It
+    - Vercel
+  tags:
+    - cmd-palette
+    - open source
+    - package
+  date_created: 2022-06-17T00:00:00.000Z
+  date_added: 2023-02-27T00:00:00.000Z
+  last_updated: 2023-02-27T00:00:00.000Z
+  slug: svelte-command-palette
+  repo_stars: 140
+  contributors:
+    - github: rohitpotato
+      twitter: rohitpotato
+      url: https://rohitpotato.hashnode.dev/
+      avatar: https://avatars.githubusercontent.com/u/30090495?v=4
+      name: Rohit Kashyap
+      location: Bengaluru, India
+      company: '@PlumHQ '
